fixed overflow on mobiel and added js for scrollTO

--- a/css/styles.css
+++ b/css/styles.css
@@ -8,7 +8,7 @@
  	color: #333447;
  }
  p,.intro,.contact{
- 	width:400px;
+ 	width:100%;
   color: #333447;
  }
  section{
@@ -59,6 +59,7 @@
   background-color: #fff;
   width: 100%;
   z-index: 3;
+  padding-left: 20px;
 }
 
 .header ul {
@@ -178,36 +179,50 @@
  	text-align:center;
  }
  .button{
- 	border:1px solid black;
- 	background:#000;
- 	color:#fff;
+ 	border:1px solid #333447;
+ 	background:#fff;
+ 	color:#333447;
  	padding:10px 10px;
  	display:inline-block;
  	margin-top:10px;
-
+  transition: all 0.2s ease-put;
  }
+
+ .blue:hover{
+  border: 1px solid #77dacff7;
+  color:#77dacff7;
+ }
+ .light-pink:hover{
+  border: 1px solid #f57e9b;
+  color:#f57e9b;
+ }
+ .light-yellow:hover{
+  border: 1px solid #f1cb5a;
+  color:#f1cb5a;
+ }
+
  .decorater{
  	width:10%;
  	height:4px;
   margin-bottom:30px;
  	border-radius: 1000px;  
-	
  }
 
- .yellow {
+ .yellow{
   background:#f1cb5a;
  }
  .pink{ 
   background:#f57e9b;
  }
 
- .teal {
+ .teal{
   background:#77dacff7;
  }
+
  /*Images*/
 
  .image {
- 	width:450px;
+ 	width:100%;
  	margin:90px 0px 90px 0px;
  	box-shadow:0 0 4px 1px rgba(0, 0, 0, 0.2);
  }
